18-03-21

Bug fix to allow something||somethign to be looked up in the database

Keikai Upgrade

12-03-21

headings now allow for 'attributes of attributes'
e.g. .`Brokasure Settlement Currency`.`Brokasure Currency Code` will find the attribute `Brokasure Settlement Currency` (e.g. "USD") convert that to a name, then look up the attribute of that name (e.g. '002')

tidying and changing the user log id so it can be picked back up when a user logs back in. Useful for stopping a long running execute

tidying, returns number of values when saving an "ad hoc" data region

with 'allexact' checks the number of names so no spurious names allowed

will not save a value as a date if the cell is formatted as text

08-03-21

A few minor bug fixes

Importer capable of recognising -> and <- (memberof and languageindicator) in column headings

On the preprocessor, will look for filled cells at the end of az_Output in case az_Output has not been expanded with additional output cells.

Will not save a value as a date if the cell is formatted as text

25-02-21

fixed bugs where az_IgnoreSheets and az_topRow are blank

recognises 'az_SheetName'

23-02-21-2

Bug fix for Arcana (ignoring certain sheets)

22-02-21

preprocessor date 0 fix

18-02-21-2

Initial version of classify by query function

new 'checkHeadings' routine, and change of way in which the data lines are moved so as to include all the values

16-02-21

Plugin user selection bug fix

Better headings parsing in the pre processor

10-02-21

Another POI patch to do with the text function

Importer will try to guess import version and pre processor version if not passed

option to open the user log and send stop commands

No longer tracking XLSX changes here - many projects are changing e.g. Oilfield, the RLD Reports and new coverholders using the pre processor

02-02-21

POI patch relating to bad handling of functions that mix array index lookups in ands

01-02-21

Encrypted file new POI fix

More pre processor work
