@@ -88,9 +88,9 @@ public class ZKComposer extends SelectorComposer<Component> {
         }
     }
 
-    private static String MULTI = "Multi";
+    public static String MULTI = "Multi";
     // chosentree
-    private static String CHOSENTREE = "ChosenTree";
+    public static String CHOSENTREE = "ChosenTree";
     private static String CHOICE = "Choice";
 
     /*
@@ -127,7 +127,7 @@ public class ZKComposer extends SelectorComposer<Component> {
                 if (name.getName().toLowerCase().endsWith(CHOSENTREE.toLowerCase())) { // aim is to pop open the inspect to get a name
                     selectionName = name.getName();
                     final SName filterQueryCell = event.getSheet().getBook().getInternalBook().getNameByName(name.getName().substring(0, name.getName().length() - CHOSENTREE.length()) + CHOICE, name.getApplyToSheetName());
-                    System.out.println(BookUtils.getSnameCell(filterQueryCell).getStringValue());
+                    //System.out.println(BookUtils.getSnameCell(filterQueryCell).getStringValue());
                     Clients.evalJavaScript("chosenTree('" + StringEscapeUtils.escapeJavaScript(BookUtils.getSnameCell(filterQueryCell).getStringValue()) + "')");
                     break;
                 }
