@@ -31,6 +31,24 @@
             .then(handleAjaxResult); //optional post-processing
     }
 
+    // the chosen tree will need to push things through
+    function postNameIdForChosenTree(nameId) {
+        //use window.fetch() API
+        fetch("/api/ZKSpreadsheetCommand", {
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            method: 'POST',
+            // 'myzss' is the id specified on kkjsp tag
+            body: JSON.stringify(kkjsp.prepare('myzss', {action: "nameIdForChosenTree", nameIdForChosenTree: String(nameId)})) // preparing Keikai's request data, it wants strings
+        })
+            .then(function (response) {
+                return response.json();
+            })
+            .then(kkjsp.process) // render change generated by SmartUpdateBridge
+            .then(handleAjaxResult); //optional post-processing
+    }
+
     //the method to handle ajax result from your servlet
     function handleAjaxResult(result) {
 //use your way to hanlde you ajax message or error
